# FastapiExample

./: .env  .gitignore  Dockerfile  conftest.py  docker-compose.yml  log.ini  main.py  pyproject.toml  start_docker_compose.sh
src/: __init__.py  exeptions.py  middleware.py  responses.py
src/crud/: example_1.py  example_2.py  items.py  users.py
src/database/: database.py
src/endpoints/: example_1.py  example_2.py  items.py  users.py
src/endpoints/example1/: crud.py  endpoints.py
src/endpoints/example2/: crud.py  endpoints.py
src/exeptions/: items.py  users.py
src/models/: example1.py  items.py  users.py
src/schemas/: example_1.py  example_2.py  items.py  users.py
src/sql/: items.sql  users.sql
tests/: __util.py  test_example_1.py  test_example_2.py  test_items.py  test_users.py
